Utworzono za pomocą Colaboratory

--- a/01_numpy_intro.ipynb
+++ b/01_numpy_intro.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNfb1j+8o7SeAWz8QSTTQTj",
+      "authorship_tag": "ABX9TyMDoKN/MHTdiFTu9Jgm2YCD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2166,11 +2166,11 @@
         "np.sqrt(9)"
       ],
       "metadata": {
-        "id": "n2T2HQSBpTGv",
-        "outputId": "91cc99d9-41ea-4472-b62f-244b5a48a87b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "n2T2HQSBpTGv",
+        "outputId": "91cc99d9-41ea-4472-b62f-244b5a48a87b"
       },
       "execution_count": 88,
       "outputs": [
@@ -2192,11 +2192,11 @@
         "np.all([2, 3, 1])"
       ],
       "metadata": {
-        "id": "os3YFShvpWsS",
-        "outputId": "ee0c3120-36ea-4dcb-bea7-6059d372a914",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "os3YFShvpWsS",
+        "outputId": "ee0c3120-36ea-4dcb-bea7-6059d372a914"
       },
       "execution_count": 89,
       "outputs": [
@@ -2218,11 +2218,11 @@
         "np.any([0, 0, 0])"
       ],
       "metadata": {
-        "id": "T96h0mRcpeF1",
-        "outputId": "cdf1ffd4-d5bb-4efd-f1b2-fa4161eada22",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "T96h0mRcpeF1",
+        "outputId": "cdf1ffd4-d5bb-4efd-f1b2-fa4161eada22"
       },
       "execution_count": 94,
       "outputs": [
@@ -2244,11 +2244,11 @@
         "bool(1.3)"
       ],
       "metadata": {
-        "id": "OXGVKkb0pt9v",
-        "outputId": "4301a523-8677-412d-d72f-0044c767a782",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "OXGVKkb0pt9v",
+        "outputId": "4301a523-8677-412d-d72f-0044c767a782"
       },
       "execution_count": 96,
       "outputs": [
@@ -2271,11 +2271,11 @@
         "A"
       ],
       "metadata": {
-        "id": "nfXRLnokp4oF",
-        "outputId": "c1ca8ab1-3655-41b7-9dbc-128fd0c479a1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "nfXRLnokp4oF",
+        "outputId": "c1ca8ab1-3655-41b7-9dbc-128fd0c479a1"
       },
       "execution_count": 98,
       "outputs": [
@@ -2297,11 +2297,11 @@
         "A[np.argmax(A)]"
       ],
       "metadata": {
-        "id": "6oimaccdqDqY",
-        "outputId": "c3d7e113-4def-487c-b9e2-e52518ede731",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6oimaccdqDqY",
+        "outputId": "c3d7e113-4def-487c-b9e2-e52518ede731"
       },
       "execution_count": 101,
       "outputs": [
@@ -2323,11 +2323,11 @@
         "A[np.argmin(A)]"
       ],
       "metadata": {
-        "id": "PhuXZ8KQqT4F",
-        "outputId": "89fdfce4-b2de-44f6-c1a5-e66f225ef8ea",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PhuXZ8KQqT4F",
+        "outputId": "89fdfce4-b2de-44f6-c1a5-e66f225ef8ea"
       },
       "execution_count": 102,
       "outputs": [
@@ -2349,11 +2349,11 @@
         "np.argsort(A)"
       ],
       "metadata": {
-        "id": "hSDbNSCsqhSt",
-        "outputId": "00563ca0-d0eb-4137-e9d7-204920c367ce",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hSDbNSCsqhSt",
+        "outputId": "00563ca0-d0eb-4137-e9d7-204920c367ce"
       },
       "execution_count": 103,
       "outputs": [
@@ -2375,11 +2375,11 @@
         "np.max(A)"
       ],
       "metadata": {
-        "id": "4aKzeNoBqvC7",
-        "outputId": "4237e80a-baf5-4e90-dec4-9164d58f7958",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4aKzeNoBqvC7",
+        "outputId": "4237e80a-baf5-4e90-dec4-9164d58f7958"
       },
       "execution_count": 104,
       "outputs": [
@@ -2401,11 +2401,11 @@
         "np.min(A)"
       ],
       "metadata": {
-        "id": "X7S0Ts5rqygL",
-        "outputId": "08fdda33-938b-4d60-f281-fb95286447ec",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "X7S0Ts5rqygL",
+        "outputId": "08fdda33-938b-4d60-f281-fb95286447ec"
       },
       "execution_count": 105,
       "outputs": [
@@ -2427,11 +2427,11 @@
         "np.mean(A)"
       ],
       "metadata": {
-        "id": "xdWk8wm6q0M9",
-        "outputId": "db1ecc6b-db4c-4320-ba1d-f7746c48a69d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xdWk8wm6q0M9",
+        "outputId": "db1ecc6b-db4c-4320-ba1d-f7746c48a69d"
       },
       "execution_count": 106,
       "outputs": [
@@ -2453,11 +2453,11 @@
         "np.median(A)"
       ],
       "metadata": {
-        "id": "PwkgFWZzq19D",
-        "outputId": "52569146-d4a4-4312-8fa8-8f8c20396516",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PwkgFWZzq19D",
+        "outputId": "52569146-d4a4-4312-8fa8-8f8c20396516"
       },
       "execution_count": 107,
       "outputs": [
@@ -2479,11 +2479,11 @@
         "np.std(A)"
       ],
       "metadata": {
-        "id": "sAeCrqa-q4BS",
-        "outputId": "6389fa8b-87e3-4e1a-ed6d-ad41f89b12dc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sAeCrqa-q4BS",
+        "outputId": "6389fa8b-87e3-4e1a-ed6d-ad41f89b12dc"
       },
       "execution_count": 108,
       "outputs": [
@@ -2510,9 +2510,431 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "A = np.arange(20)\n",
+        "A"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fnNp-u8yrEdC",
+        "outputId": "115583ee-cdb3-460f-99ed-b21d7a8b214f"
+      },
+      "execution_count": 110,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,\n",
+              "       17, 18, 19])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 110
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#A[idx], A[start:stop], A[:stop], A[start:]"
+      ],
+      "metadata": {
+        "id": "bQT_PBG4rSE4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A[2]"
+      ],
+      "metadata": {
+        "id": "wBGrRs1Vriqw",
+        "outputId": "30588cc2-ff71-4a6c-ea66-d6bbbde37a7b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 113,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 113
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A[2:]"
+      ],
+      "metadata": {
+        "id": "sXpnZ_fyrnQo",
+        "outputId": "d278a6d8-220e-4b71-a5b2-85ca32ea7726",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 114,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17, 18,\n",
+              "       19])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 114
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A[:2]"
+      ],
+      "metadata": {
+        "id": "DhOQCBpBrplQ",
+        "outputId": "22f95af5-a801-484b-ca16-c07ee6c449fc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 115,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 1])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 115
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A[[0,2]]"
+      ],
+      "metadata": {
+        "id": "4OawUz2Jrssn",
+        "outputId": "11935281-df1d-4bf6-d609-86584e154a33",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 116,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 2])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 116
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A[-1]"
+      ],
+      "metadata": {
+        "id": "rbhXD0yerw76",
+        "outputId": "3f7bd866-7b19-4966-f37e-ff1fe71162a9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 117,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "19"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 117
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A[10:15]"
+      ],
+      "metadata": {
+        "id": "uL1d7AUJry33",
+        "outputId": "888240e5-5710-441e-d29b-2ee9e4a9c8e4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 118,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([10, 11, 12, 13, 14])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 118
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A = A.reshape(4, 5)\n",
+        "A"
+      ],
+      "metadata": {
+        "id": "fNZA4zemr4Ab",
+        "outputId": "51ec95aa-47c8-4e34-85e1-f0045824725d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 119,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0,  1,  2,  3,  4],\n",
+              "       [ 5,  6,  7,  8,  9],\n",
+              "       [10, 11, 12, 13, 14],\n",
+              "       [15, 16, 17, 18, 19]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 119
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A[1] # cut second row"
+      ],
+      "metadata": {
+        "id": "cOPrBI_xsRE8",
+        "outputId": "8db3bd56-eef1-4a1c-804a-be49e46cd910",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 125,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([5, 6, 7, 8, 9])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 125
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A[:, 0] # cut first column"
+      ],
+      "metadata": {
+        "id": "TghEhs9hr-Sn",
+        "outputId": "22283523-0982-4c84-c737-b18ab12e552e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 126,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 0,  5, 10, 15])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 126
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A[:, -1] # cut last column"
+      ],
+      "metadata": {
+        "id": "HvWW0U8OsJLz",
+        "outputId": "7bee325e-f216-4059-bdab-93ed2eb96f1a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 127,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 4,  9, 14, 19])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 127
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A[1, 3] # cut value from 2nd row and 4th column"
+      ],
+      "metadata": {
+        "id": "-gXaEO3dskQI",
+        "outputId": "bfa484b2-4e26-4107-c4df-33964d919e30",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 129,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 129
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A[2:4, 1:3]  #  rows from:to (from 0, to -1) : cols from:to (from 0, to -1)"
+      ],
+      "metadata": {
+        "id": "3hmVMxiMs3WL",
+        "outputId": "2dbe4253-94d5-419c-bb12-dea835a0e29a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 152,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[11, 12],\n",
+              "       [16, 17]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 152
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A[1:2] # same as A[1] - cut 2nd row"
+      ],
+      "metadata": {
+        "id": "0g5SMnyxvDXD",
+        "outputId": "217370c0-5459-47b4-a01f-4ef3b274f0c6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 160,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[5, 6, 7, 8, 9]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 160
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A[1, 2] = 14\n",
+        "A"
+      ],
+      "metadata": {
+        "id": "Lj1anwjpvlFs",
+        "outputId": "34b50b88-fe16-4a32-c73f-4e4dfacb4c58",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 163,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0,  1,  2,  3,  4],\n",
+              "       [ 5,  6, 14,  8,  9],\n",
+              "       [10, 11, 12, 13, 14],\n",
+              "       [15, 16, 17, 18, 19]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 163
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Iteracja po tablicach"
+      ],
+      "metadata": {
+        "id": "N3u-rFTQv_ly"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "fnNp-u8yrEdC"
+        "id": "EPjQuiLHwD-S"
       },
       "execution_count": null,
       "outputs": []
