Utworzono za pomocą Colaboratory

--- a/01_numpy_intro.ipynb
+++ b/01_numpy_intro.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMDoKN/MHTdiFTu9Jgm2YCD",
+      "authorship_tag": "ABX9TyP/iAjhh9HLi9z84Yn8Vtml",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2553,11 +2553,11 @@
         "A[2]"
       ],
       "metadata": {
-        "id": "wBGrRs1Vriqw",
-        "outputId": "30588cc2-ff71-4a6c-ea66-d6bbbde37a7b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wBGrRs1Vriqw",
+        "outputId": "30588cc2-ff71-4a6c-ea66-d6bbbde37a7b"
       },
       "execution_count": 113,
       "outputs": [
@@ -2579,11 +2579,11 @@
         "A[2:]"
       ],
       "metadata": {
-        "id": "sXpnZ_fyrnQo",
-        "outputId": "d278a6d8-220e-4b71-a5b2-85ca32ea7726",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sXpnZ_fyrnQo",
+        "outputId": "d278a6d8-220e-4b71-a5b2-85ca32ea7726"
       },
       "execution_count": 114,
       "outputs": [
@@ -2606,11 +2606,11 @@
         "A[:2]"
       ],
       "metadata": {
-        "id": "DhOQCBpBrplQ",
-        "outputId": "22f95af5-a801-484b-ca16-c07ee6c449fc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "DhOQCBpBrplQ",
+        "outputId": "22f95af5-a801-484b-ca16-c07ee6c449fc"
       },
       "execution_count": 115,
       "outputs": [
@@ -2632,11 +2632,11 @@
         "A[[0,2]]"
       ],
       "metadata": {
-        "id": "4OawUz2Jrssn",
-        "outputId": "11935281-df1d-4bf6-d609-86584e154a33",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4OawUz2Jrssn",
+        "outputId": "11935281-df1d-4bf6-d609-86584e154a33"
       },
       "execution_count": 116,
       "outputs": [
@@ -2658,11 +2658,11 @@
         "A[-1]"
       ],
       "metadata": {
-        "id": "rbhXD0yerw76",
-        "outputId": "3f7bd866-7b19-4966-f37e-ff1fe71162a9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rbhXD0yerw76",
+        "outputId": "3f7bd866-7b19-4966-f37e-ff1fe71162a9"
       },
       "execution_count": 117,
       "outputs": [
@@ -2684,11 +2684,11 @@
         "A[10:15]"
       ],
       "metadata": {
-        "id": "uL1d7AUJry33",
-        "outputId": "888240e5-5710-441e-d29b-2ee9e4a9c8e4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "uL1d7AUJry33",
+        "outputId": "888240e5-5710-441e-d29b-2ee9e4a9c8e4"
       },
       "execution_count": 118,
       "outputs": [
@@ -2711,11 +2711,11 @@
         "A"
       ],
       "metadata": {
-        "id": "fNZA4zemr4Ab",
-        "outputId": "51ec95aa-47c8-4e34-85e1-f0045824725d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fNZA4zemr4Ab",
+        "outputId": "51ec95aa-47c8-4e34-85e1-f0045824725d"
       },
       "execution_count": 119,
       "outputs": [
@@ -2740,11 +2740,11 @@
         "A[1] # cut second row"
       ],
       "metadata": {
-        "id": "cOPrBI_xsRE8",
-        "outputId": "8db3bd56-eef1-4a1c-804a-be49e46cd910",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cOPrBI_xsRE8",
+        "outputId": "8db3bd56-eef1-4a1c-804a-be49e46cd910"
       },
       "execution_count": 125,
       "outputs": [
@@ -2766,11 +2766,11 @@
         "A[:, 0] # cut first column"
       ],
       "metadata": {
-        "id": "TghEhs9hr-Sn",
-        "outputId": "22283523-0982-4c84-c737-b18ab12e552e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "TghEhs9hr-Sn",
+        "outputId": "22283523-0982-4c84-c737-b18ab12e552e"
       },
       "execution_count": 126,
       "outputs": [
@@ -2792,11 +2792,11 @@
         "A[:, -1] # cut last column"
       ],
       "metadata": {
-        "id": "HvWW0U8OsJLz",
-        "outputId": "7bee325e-f216-4059-bdab-93ed2eb96f1a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HvWW0U8OsJLz",
+        "outputId": "7bee325e-f216-4059-bdab-93ed2eb96f1a"
       },
       "execution_count": 127,
       "outputs": [
@@ -2818,11 +2818,11 @@
         "A[1, 3] # cut value from 2nd row and 4th column"
       ],
       "metadata": {
-        "id": "-gXaEO3dskQI",
-        "outputId": "bfa484b2-4e26-4107-c4df-33964d919e30",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-gXaEO3dskQI",
+        "outputId": "bfa484b2-4e26-4107-c4df-33964d919e30"
       },
       "execution_count": 129,
       "outputs": [
@@ -2844,11 +2844,11 @@
         "A[2:4, 1:3]  #  rows from:to (from 0, to -1) : cols from:to (from 0, to -1)"
       ],
       "metadata": {
-        "id": "3hmVMxiMs3WL",
-        "outputId": "2dbe4253-94d5-419c-bb12-dea835a0e29a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3hmVMxiMs3WL",
+        "outputId": "2dbe4253-94d5-419c-bb12-dea835a0e29a"
       },
       "execution_count": 152,
       "outputs": [
@@ -2871,11 +2871,11 @@
         "A[1:2] # same as A[1] - cut 2nd row"
       ],
       "metadata": {
-        "id": "0g5SMnyxvDXD",
-        "outputId": "217370c0-5459-47b4-a01f-4ef3b274f0c6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0g5SMnyxvDXD",
+        "outputId": "217370c0-5459-47b4-a01f-4ef3b274f0c6"
       },
       "execution_count": 160,
       "outputs": [
@@ -2898,11 +2898,11 @@
         "A"
       ],
       "metadata": {
-        "id": "Lj1anwjpvlFs",
-        "outputId": "34b50b88-fe16-4a32-c73f-4e4dfacb4c58",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Lj1anwjpvlFs",
+        "outputId": "34b50b88-fe16-4a32-c73f-4e4dfacb4c58"
       },
       "execution_count": 163,
       "outputs": [
@@ -2932,12 +2932,455 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "for row in A:\n",
+        "  print(row)"
+      ],
       "metadata": {
-        "id": "EPjQuiLHwD-S"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EPjQuiLHwD-S",
+        "outputId": "727f4a17-07fa-43c2-cc4c-2981d9304599"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 164,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0 1 2 3 4]\n",
+            "[ 5  6 14  8  9]\n",
+            "[10 11 12 13 14]\n",
+            "[15 16 17 18 19]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for row in A:\n",
+        "  print(row[2])"
+      ],
+      "metadata": {
+        "id": "xcLObCGs6BeB",
+        "outputId": "97fe2ee4-e485-4f29-f5b0-048269a7a47e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 167,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "14\n",
+            "12\n",
+            "17\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for row in A:\n",
+        "  print(row[:3])"
+      ],
+      "metadata": {
+        "id": "99D7H9v16KKh",
+        "outputId": "8e1902a9-3480-4192-9f98-acc536ccdc0d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 171,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0 1 2]\n",
+            "[ 5  6 14]\n",
+            "[10 11 12]\n",
+            "[15 16 17]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# iteration on each item\n",
+        "for item in A.flat: \n",
+        "  print(item)"
+      ],
+      "metadata": {
+        "id": "dI9zhRhm6Ug6",
+        "outputId": "b642a8d4-c401-42de-b7fc-e0869bf404bf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 173,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "14\n",
+            "8\n",
+            "9\n",
+            "10\n",
+            "11\n",
+            "12\n",
+            "13\n",
+            "14\n",
+            "15\n",
+            "16\n",
+            "17\n",
+            "18\n",
+            "19\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Zmiana rozmiaru tablic"
+      ],
+      "metadata": {
+        "id": "9Gqr-Hkf6jMc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A.shape"
+      ],
+      "metadata": {
+        "id": "7ygQWMZg6l3V",
+        "outputId": "f0bf73ff-850b-41de-c72e-a33cb1161dbf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 174,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(4, 5)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 174
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A.reshape(5,4)"
+      ],
+      "metadata": {
+        "id": "3Fh7QxVk6u92",
+        "outputId": "5fbd28ea-575f-4e8e-85c2-eafc7ecd3b50",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 175,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0,  1,  2,  3],\n",
+              "       [ 4,  5,  6, 14],\n",
+              "       [ 8,  9, 10, 11],\n",
+              "       [12, 13, 14, 15],\n",
+              "       [16, 17, 18, 19]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 175
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A.ravel()"
+      ],
+      "metadata": {
+        "id": "YuJ2JLY76yCH",
+        "outputId": "136db897-a110-4952-f4df-ab57739ad1b0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 176,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 0,  1,  2,  3,  4,  5,  6, 14,  8,  9, 10, 11, 12, 13, 14, 15, 16,\n",
+              "       17, 18, 19])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 176
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A.T"
+      ],
+      "metadata": {
+        "id": "zP9YFFcZ65vs",
+        "outputId": "052f7adf-06b6-472c-8211-ae6f6edb923a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 177,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0,  5, 10, 15],\n",
+              "       [ 1,  6, 11, 16],\n",
+              "       [ 2, 14, 12, 17],\n",
+              "       [ 3,  8, 13, 18],\n",
+              "       [ 4,  9, 14, 19]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 177
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Maski logiczne"
+      ],
+      "metadata": {
+        "id": "oByCJPZS7ClT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A = np.arange(start=-10, stop=10, step=0.5)\n",
+        "A = A.reshape(10, -1)\n",
+        "A"
+      ],
+      "metadata": {
+        "id": "B9wI3vf37Fwf",
+        "outputId": "9c948b52-037d-4eed-d875-fb0188ed1517",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 180,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[-10. ,  -9.5,  -9. ,  -8.5],\n",
+              "       [ -8. ,  -7.5,  -7. ,  -6.5],\n",
+              "       [ -6. ,  -5.5,  -5. ,  -4.5],\n",
+              "       [ -4. ,  -3.5,  -3. ,  -2.5],\n",
+              "       [ -2. ,  -1.5,  -1. ,  -0.5],\n",
+              "       [  0. ,   0.5,   1. ,   1.5],\n",
+              "       [  2. ,   2.5,   3. ,   3.5],\n",
+              "       [  4. ,   4.5,   5. ,   5.5],\n",
+              "       [  6. ,   6.5,   7. ,   7.5],\n",
+              "       [  8. ,   8.5,   9. ,   9.5]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 180
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A > 0"
+      ],
+      "metadata": {
+        "id": "wBnkKq4W7cT_",
+        "outputId": "b9f6b9c3-67e5-4064-90e4-c231712d921b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 181,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[False, False, False, False],\n",
+              "       [False, False, False, False],\n",
+              "       [False, False, False, False],\n",
+              "       [False, False, False, False],\n",
+              "       [False, False, False, False],\n",
+              "       [False,  True,  True,  True],\n",
+              "       [ True,  True,  True,  True],\n",
+              "       [ True,  True,  True,  True],\n",
+              "       [ True,  True,  True,  True],\n",
+              "       [ True,  True,  True,  True]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 181
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A[A>0]"
+      ],
+      "metadata": {
+        "id": "6Z8g8HY_7hwL",
+        "outputId": "cbe13b36-5aaf-4e01-faf3-3197b8f7051c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 182,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.5, 1. , 1.5, 2. , 2.5, 3. , 3.5, 4. , 4.5, 5. , 5.5, 6. , 6.5,\n",
+              "       7. , 7.5, 8. , 8.5, 9. , 9.5])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 182
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.bitwise_and(A> -5, A<5)"
+      ],
+      "metadata": {
+        "id": "eRIcBUSJ7r_M",
+        "outputId": "846b6d25-0413-4288-a61e-4fb9160748af",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 184,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[False, False, False, False],\n",
+              "       [False, False, False, False],\n",
+              "       [False, False, False,  True],\n",
+              "       [ True,  True,  True,  True],\n",
+              "       [ True,  True,  True,  True],\n",
+              "       [ True,  True,  True,  True],\n",
+              "       [ True,  True,  True,  True],\n",
+              "       [ True,  True, False, False],\n",
+              "       [False, False, False, False],\n",
+              "       [False, False, False, False]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 184
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A[np.bitwise_and(A> -5, A<5)]"
+      ],
+      "metadata": {
+        "id": "E19y5kZB76g4",
+        "outputId": "f8ec054a-6add-428d-e677-fe5e1e562a86",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 185,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([-4.5, -4. , -3.5, -3. , -2.5, -2. , -1.5, -1. , -0.5,  0. ,  0.5,\n",
+              "        1. ,  1.5,  2. ,  2.5,  3. ,  3.5,  4. ,  4.5])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 185
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.bitwise_or(A < -5, A > 5)"
+      ],
+      "metadata": {
+        "id": "LpnYQ4MH7-c7",
+        "outputId": "7cd32294-bc4b-4516-9416-02f43f22cf1c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 186,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ True,  True,  True,  True],\n",
+              "       [ True,  True,  True,  True],\n",
+              "       [ True,  True, False, False],\n",
+              "       [False, False, False, False],\n",
+              "       [False, False, False, False],\n",
+              "       [False, False, False, False],\n",
+              "       [False, False, False, False],\n",
+              "       [False, False, False,  True],\n",
+              "       [ True,  True,  True,  True],\n",
+              "       [ True,  True,  True,  True]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 186
+        }
+      ]
     }
   ]
 }
