Utworzono za pomocą Colaboratory

--- a/01_wprowadzenie/02_algebra_liniowa.ipynb
+++ b/01_wprowadzenie/02_algebra_liniowa.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPiOkK26Dn41sejmKu+BHB3",
+      "authorship_tag": "ABX9TyMEv6x4pIybUH3lHVBqreRD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,14 +28,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
         "id": "hpjSdwlLJ59P",
-        "outputId": "28ac1d6b-c0a4-41ac-e105-60505c22b4db"
+        "outputId": "d2472da8-90d0-4934-9c45-a2fefea39fb0"
       },
       "outputs": [
         {
@@ -49,7 +49,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 2
         }
       ],
       "source": [
@@ -68,12 +68,168 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "v1 = np.array([0, 4])\n",
+        "v1"
+      ],
       "metadata": {
-        "id": "4GGwMZgI9mfb"
+        "id": "4GGwMZgI9mfb",
+        "outputId": "75f50693-0432-4779-e557-f12595964b0f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 4])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.linalg.norm(v1)"
+      ],
+      "metadata": {
+        "id": "n4jInPWCAxTH",
+        "outputId": "0b9ae0e1-12ba-4254-ff3a-ee400d04931e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Norma euklidesowa w $R^n$"
+      ],
+      "metadata": {
+        "id": "JdPyyNtuBDEh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "v2 = np.array([-10, 10, 13])\n",
+        "np.linalg.norm(v2)"
+      ],
+      "metadata": {
+        "id": "ttGzewITBG1h",
+        "outputId": "18cbe4c6-a3ea-4bff-e2f9-8f437d3e942a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "19.209372712298546"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Odległość dwóch punktów na płaszczyźnie"
+      ],
+      "metadata": {
+        "id": "jVEK1ILcBx9f"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p = np.array([3, 0])\n",
+        "q = np.array([0, 4])\n",
+        "\n",
+        "np.linalg.norm(p - q)"
+      ],
+      "metadata": {
+        "id": "NyAJgltyBy4c",
+        "outputId": "7f06572d-6e5c-4478-aea4-f8543e39b7bb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Odległość dwóch punktów w przestrzeni $R^n$"
+      ],
+      "metadata": {
+        "id": "2ac2htfWCZYZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p = np.array([3, 0, 1])\n",
+        "q = np.array([0, 4, 2])\n",
+        "\n",
+        "np.linalg.norm(p - q)"
+      ],
+      "metadata": {
+        "id": "-uNAPGWcCcWb",
+        "outputId": "fa1e3eb6-83b7-4068-f0da-82ca003003d3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5.0990195135927845"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     }
   ]
 }
